@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.3) unstable; urgency=low
 
   * uri-verify: don't reject double slash after first segment
   * python: fixed AttributeError in __getattr__()
+  * python: added method Response.process()
 
  --
 
